...
                          },
                          icon: const Icon(
                            Icons.logout,
                            color: Color(0xFFBA1A1A),
                          ),
                          label: const Text(
                            'Sign Out',
                            style: TextStyle(
                              color: Color(0xFFBA1A1A),
                              fontWeight: FontWeight.bold,
                              fontSize: 16,
                            ),
                          ),
...
